--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,24 @@
-Source: template-repository
-Section: unknown
+Source: nvidia-modprobe
+Section: contrib/utils
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
+Uploaders:
+ Andreas Beckmann <anbe@debian.org>,
+ Luca Boccassi <bluca@debian.org>,
+Build-Depends:
+ debhelper-compat (= 13),
+ m4,
+Rules-Requires-Root: binary-targets
+Standards-Version: 4.7.0
+Homepage: https://github.com/NVIDIA/nvidia-modprobe
+Vcs-Browser: https://salsa.debian.org/nvidia-team/nvidia-modprobe
+Vcs-Git: https://salsa.debian.org/nvidia-team/nvidia-modprobe.git
 
-Package: template-repository
-Architecture: any
+Package: nvidia-modprobe
+Architecture: i386 amd64 armhf arm64 ppc64el
+Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: utility to load NVIDIA kernel modules and create device nodes
+ This setuid program is used to create NVIDIA Linux device files and load the
+ NVIDIA kernel module, on behalf of NVIDIA Linux driver components which may
+ not have sufficient privileges to perform these actions on their own.
